<resources>
    <string name="app_name">BookManager2.0</string>
    <string name="nav_settings">设置</string>
    <string name="nav_about">关于</string>
    <string name="add_book">添加</string>
    <string name="sort">sort</string>
    <string name="edit">编辑</string>
    <string name="more">更多</string>
    <string name="select_add_way">请选择添加方式</string>
    <string name="scan_add">扫码录入</string>
    <string name="manual_add">手动录入</string>
    <string name="input_book_info">请输入图书信息</string>
    <string name="book_name">书名：</string>
    <string name="book_author">作者：</string>
    <string name="book_page">总页数：</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="input_name_hint">请输入书名</string>
    <string name="input_author_hint">请输入作者</string>
    <string name="input_page_hint">请输入总页数</string>
    <string name="input_book_progress">更新进度</string>
    <string name="book_cover">图书封面</string>
    <string name="info_change">修改图书信息</string>
    <string name="info_name">书名：%1$s</string>
    <string name="info_author">作者：%1$s</string>
    <string name="info_page">页数：%1$d</string>
    <string name="info_publishing">出版社：%1$s</string>
    <string name="info_isbn">ISBN：%1$s</string>
    <string name="info_description">简介：%1$s</string>
    <string name="progress">进度</string>
    <string name="finish">读过</string>
    <string name="progress_display">%1$d/%2$d</string>
    <string name="book_time">%1$s——%2$s</string>
    <string name="finish_book">完成图书</string>
    <string name="finish_book_confirm">是否完成该图书？</string>
    <string name="restart_book">重新开始</string>
    <string name="restart_book_confirm">是否重新开始？</string>
    <string name="no_data">暂无记录</string>
    <string name="history_page">读完第%1$d~%2$d页</string>
    <string name="history_update">修改日期</string>
    <string name="history_delete">删除</string>
    <string name="update_progress">修改进度</string>
    <string name="restart">重新开始</string>
    <string name="version">版本1.0.0</string>
    <string name="export">导出</string>
    <string name="book_info_title">添加以下图书</string>
</resources>