<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="15dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finish_book"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/finish_book_confirm"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#d6d6d6"
                    android:layout_marginTop="10dp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:id="@+id/finish_cancel"
                        android:text="@string/cancel"
                        android:textColor="@color/black"
                        android:background="?attr/selectableItemBackground" />

                <View
                        android:layout_width="0.1dp"
                        android:layout_height="match_parent"
                        android:id="@+id/separator"
                        android:background="#d6d6d6" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/finish_confirm"
                        android:gravity="center"
                        android:text="@string/confirm"
                        android:textColor="@color/black"
                        android:background="?attr/selectableItemBackground" />

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>