<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View.OnClickListener"/>
        <variable
                name="scan"
                type="OnClickListener" />
        <variable
                name="manual"
                type="OnClickListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="15dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/select_add_way"
                    android:paddingVertical="10dp"
                    style="@style/DialogTitleTextStyle" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/separator_color" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_add"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    style="@style/DialogButtonTextStyle"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{scan}"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/separator_color" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/manual_add"
                    android:paddingVertical="10dp"
                    style="@style/DialogButtonTextStyle"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{manual}"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>