<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="15dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/edit"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#d6d6d6" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/history_update"
                    android:text="@string/history_update"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/selector_dialog_button" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#d6d6d6"
                    android:id="@+id/separator"
                    android:visibility="visible" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/history_delete"
                    android:text="@string/history_delete"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="17sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/selector_dialog_button"
                    android:visibility="visible" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
