<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="15dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/input_book_progress"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="今天读到第"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp" />

                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minHeight="48dp"
                        android:id="@+id/input_book_progress"
                        android:inputType="numberDecimal"
                        android:hint="几"
                        android:autofillHints="name" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="页啦"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp" />
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#d6d6d6"
                    android:layout_marginTop="10dp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        android:id="@+id/update_cancel"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:background="?attr/selectableItemBackground" />

                <View
                        android:layout_width="0.1dp"
                        android:layout_height="match_parent"
                        android:background="#d6d6d6" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/confirm"
                        android:gravity="center"
                        android:id="@+id/update_confirm"
                        android:textColor="@color/black"
                        android:background="?attr/selectableItemBackground" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>