<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/bottom_sheet_behavior"
            android:background="@drawable/shape_sheet_dialog">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:text="添加以下图书"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/book_cover"
                    android:id="@+id/book_cover"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter" />

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    android:layout_margin="10dp"
                    android:id="@+id/info_card">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:id="@+id/book_info"
                        android:gravity="start"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:background="@drawable/selector_dialog_button">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:id="@+id/book_info_name"
                            android:layout_marginBottom="4dp"
                            android:maxLines="1"
                            android:ellipsize="end" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:id="@+id/book_info_author"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_marginBottom="4dp" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:id="@+id/book_info_publishing"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_marginBottom="4dp" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:id="@+id/book_info_page"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_marginBottom="4dp" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:id="@+id/book_info_isbn"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_marginBottom="4dp" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:id="@+id/book_info_description"
                            android:maxLines="10"
                            android:ellipsize="end" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="点击卡片可修改部分信息"
                    android:textColor="@color/gray"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_horizontal" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="#d6d6d6" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:id="@+id/insert_cancel"
                        android:text="@string/cancel"
                        android:textColor="@color/black"
                        android:background="@drawable/selector_dialog_button" />

                <View
                        android:layout_width="0.1dp"
                        android:layout_height="match_parent"
                        android:id="@+id/separator"
                        android:background="#d6d6d6" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/insert_confirm"
                        android:gravity="center"
                        android:text="@string/confirm"
                        android:textColor="@color/black"
                        android:background="@drawable/selector_dialog_button" />

            </LinearLayout>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>